Move ProductVersion to odradek-core